grammar.js
    program: ($) =>
      repeat(
        $._node,
      ),

    _node: ($) =>
      choice(
        $._statement,
        $.template_content,
        $.comment,
      ),

    template_content: (_) =>
      choice(
        /[^{]+|\{[^{%]/,
        '{%%',
        '{{{',
      ),

    _expression: ($) =>
      choice(
        $._literal,
        $.filter,
        $.identifier,
        $.predicate,
        $.access,
        output($._expression),
      ),

    translation_expression: ($) =>
      seq(
        't',
        field('key', choice($.string, $.identifier)),
        optional(
          field('argument',
            repeat($.argument),
          ),
        ),
      ),

    // //////////////
    // Primitives //
    // //////////////

    // identifier: (_) => /([a-zA-Z][0-9a-zA-Z_\?-]*)/,
    identifier: (_) => /\[?([a-zA-Z][0-9a-zA-Z_\?-]*)\]?/,

    _literal: ($) => choice($.string, $.number, $.boolean),

    string: (_) =>
      choice(
        seq('\'', /[^']*/, '\''),
        seq('"', /[^"]*/, '"'),
      ),

    assignment_statement: ($) =>
      seq(
        'assign',
        field('variable_name', $.identifier),
        '=',
        field('value', $._expression),
      ),

    filter: ($) =>
      seq(
        field('body', $._expression),
        '|',
        field('name', $.identifier),
        optional(seq(':', $.argument_list)),
      ),

    argument_list: ($) =>
      sep1(
        choice($._literal, $.identifier, $.access, $.argument),
        ',',
      ),

    result_statement: ($) =>
      seq(
        'result',
        field('result_name', choice($._literal, $.identifier)),
        field('result_value', $._expression),
      ),

    push_statement: ($) =>
      seq(
        'push',
        field('item', choice($.string, $.identifier)),
        'to:',
        field('array', $.identifier),
        optional(seq('at:', field('at', $.identifier))),
      ),

    pop_statement: ($) =>
      seq(
        'pop',
        field('item', choice($.string, $.identifier)),
        'from:',
        field('array', $.identifier),
        optional(seq('at:', field('at', $.identifier))),
      ),

    // /////////////////////
    // Paired Statements //
    // /////////////////////

    // Because paired statements can appear in both tagged and untagged forms
    // (inside vs. outside a liquid tag), we abstract their rules to constructors
    // which allow for a flexible internal representations of sub-rules and tagging.

    // tagged
    if_statement: ($) => paired($).tagged._if,

    for_loop_statement: ($) => paired($).tagged._for_loop,

    unless_statement: ($) => paired($).tagged._unless,

    capture_statement: ($) => paired($).tagged._capture,
